# CivicAurAI

./: .dockerignore  .env  Dockerfile  README.md  analyzer.py  api.py  chunker.py  config.py  current_schema.sql  export_backup.py  export_backup.sh  extract_ddl.py  ingest.py  models.py  pyproject.toml  requirements.txt  restore_data.py  run_migration.sh  seed_and_embed.py  service.py  spanner_schema_and_seed.sql  spanner_schema_design.md  spanner_store.py  storage.py
frontend/src/: App.tsx  index.css
frontend/src/components/: PrivacyToggle.tsx  ReportTypeCard.tsx  ResolutionCard.tsx  TopNav.tsx
scripts/: fix_spanner_sql_timestamps.py
spanner_sql_backup_20260322_162807/: 00_schema.sql  01_Districts_data.sql  02_IssueCategories_data.sql  03_Users_data.sql  04_Organizations_data.sql  05_Issues_data.sql  06_Videos_data.sql  07_IssueEpisodes_data.sql  08_VideoTelemetry_data.sql  09_IssueUpvotes_data.sql  10_VideoSegments_data.sql  11_Reports_data.sql  12_MediaBlobs_data.sql  13_UserDistricts_data.sql  14_UserInterests_data.sql  15_OrgDistricts_data.sql
synthetic/: generate_fake_json.py  waymo_soma.json  waymo_soma_after.json  waymo_soma_during.json  waymo_tl_after.json  waymo_tl_before.json  waymo_tl_during.json
